--- a/MyBroker/auth/views/admin/functionsUtil.ejs
+++ b/MyBroker/auth/views/admin/functionsUtil.ejs
@@ -115,5 +115,6 @@ it easy to select them with getElementsByClassName:
           profileListDiv.style.zIndex = -1;
           userListDiv.style.zIndex = -1;
           manageUserDiv.style.zIndex = -1;
+          createAccountDiv.style.zIndex = -1;
         
       }
