--- a/MyBroker/auth/views/admin/useradmin/functionsCRUDUser.ejs
+++ b/MyBroker/auth/views/admin/useradmin/functionsCRUDUser.ejs
@@ -72,7 +72,7 @@
 //  *********************** Manage User *****************************
 //  ********************************************************************
 
-/* Function handling the button to create a new profile - it creates a Profile object */      
+/* Function handling the button to view the user accounts (zoom to user) */      
       function manageUser(user) {
         
         $("#titleManagedUser").html(user.firstname+" "+user.lastname);
@@ -91,14 +91,19 @@
       }
       
   
-  ///// Display user accounts and build accounts objects    
+  ///// Display user accounts and build accounts objects 
+     
       function updateAccountsUserTable(response, status, xhr) {
-          if (status == 'success') 
-              { 
-              if (response.length === 0) {
+      
+           if (status == 'success') 
+           { 
+              var arrayLength = response.records.length;
+              if (arrayLength === 0) {
                  $("#userAccountsTable tr:gt(1)").remove();
-                 return
-              }
+                 theUser = usersList.get(response.username);
+                 theUser.accounts.clear();
+                 return;
+           }
               
 ////////////////////////////////////////////////
 // Extract the set of accountid's for the user and build the user object          
@@ -106,34 +111,33 @@
 // with [(accountNo) -> [ (profilename) -> [ (tickername) -> [Ticker Object] ] ]. This is a map of a map of a map.
 // From stackoverflow, not necessarily the best but not the worst.
 
-                var arrayLength = response.length;
-                theUser = usersList.get(response[0].username);
-                theUser.accounts.clear();  // clean up the accounts map before repopulating  with profiles            
-                
-                for (var i = 0; i < arrayLength; i++) {
-                    let aTicker = new TickerObject(response[i].symbol,response[i].exchange);
-                    aTicker.units = response[i].units;
-                    if (theUser.accounts.has(response[i].accountid)) {
-                       if (theUser.accounts.get(response[i].accountid).has(response[i].profilename)) {
-                          theUser.accounts.get(response[i].accountid).get(response[i].profilename).set(aTicker.symbol, aTicker);
+           var arrayLength = response.records.length;
+           theUser = usersList.get(response.username);
+           theUser.accounts.clear();  // clean up the accounts map before repopulating  with profiles                 
+           for (var i = 0; i < arrayLength; i++) {
+               let aTicker = new TickerObject(response.records[i].symbol,response.records[i].exchange);
+                    aTicker.units = response.records[i].units;
+                    if (theUser.accounts.has(response.records[i].accountid)) {
+                       if (theUser.accounts.get(response.records[i].accountid).has(response.records[i].profilename)) {
+                          theUser.accounts.get(response.records[i].accountid).get(response.records[i].profilename).set(aTicker.symbol, aTicker);
                        } 
                        else {
                           let aProfile = new Map();
                           aProfile.set(aTicker.symbol, aTicker);
-                          theUser.accounts.get(response[i].accountid).set(response[i].profilename,aProfile);
+                          theUser.accounts.get(response.records[i].accountid).set(response.records[i].profilename,aProfile);
                        }   
                     } 
                     else {
                        let aProfile = new Map();
                        aProfile.set(aTicker.symbol, aTicker);
                        let accountProfiles = new Map();
-                       accountProfiles.set(response[i].profilename, aProfile);
-                       theUser.accounts.set(response[i].accountid, accountProfiles);
+                       accountProfiles.set(response.records[i].profilename, aProfile);
+                       theUser.accounts.set(response.records[i].accountid, accountProfiles);
                     }  
        
                 }
 // Insert new user object in the (global) users list, keeping everything up to date.
-                usersList.set(response[0].username, theUser);
+                usersList.set(response.username, theUser);
                 
                 let accountIt = theUser.accounts.keys();
  
