--- a/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
+++ b/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
@@ -33,6 +33,8 @@
            if (status == 'success') 
               { console.log(response);
                 updateProfileName(response[0].profilename,response[0].risk);
+                 $("#updateProfileTickers tr:gt(1)").remove();
+                
                 loadTickerRows('updateProfileTickers',response);
               }
            else throw "status";
