--- a/MyBroker/auth/views/admin/dialogs.ejs
+++ b/MyBroker/auth/views/admin/dialogs.ejs
@@ -21,3 +21,14 @@ Modify to ensure total is less than 100%</p>
        </fieldset>
      </form>
    </div>
+   
+   
+   
+<!-- Dialog for confirmation of profile rebalance -->
+   <div id="dialog-rebalance" title="Profile Rebalance Order">
+     <span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>A rebalance order will issue buy/sell orders for this account in order to achieve the profile % targets.
+     <p>Click on the rebalance button to trigger the rebalance order.</p>
+     Username: <span id="username">A</span><br>
+     Account: <span id="account">B</span><br>
+     Profile: <span id="profile">C</span><br>    
+   </div>   
