rebalance now working

--- a/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
+++ b/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
@@ -103,7 +103,7 @@
                    var profileDelete=row.insertCell(); 
                    profileDelete.innerHTML='<button id="deleteProfile" onclick="deleteProfile(\''+response[i].profilename+'\')"><img src="https://img.icons8.com/color/48/000000/trash.png" alt="Delete"></button>';        		     
                    var profileRebalance=row.insertCell(); 
-                   profileRebalance.innerHTML='<button id="rebalanceProfile" onclick="rebalanceProfile(\''+response[i].profilename+'\')"><img src="https://img.icons8.com/nolan/48/000000/scales.png" alt="Rebalance"></button>';        		     
+                   profileRebalance.innerHTML='<button id="rebalanceProfile" onclick="rebalanceProfile(\''+response[i].profilename+'\')"><img src="https://img.icons8.com/nolan/48/scales.png" alt="Rebalance"></button>';        		     
         		}
 /// Recreate the ProfileList array for use throughout Admin page:
                 
