--- a/MyBroker/auth/views/admin/useradmin/functionsCRUDUser.ejs
+++ b/MyBroker/auth/views/admin/useradmin/functionsCRUDUser.ejs
@@ -202,7 +202,7 @@
                       
                       addCell = document.createElement("td");
                       theIcon = document.createElement("img");
-                      theIcon.src = "https://img.icons8.com/nolan/48/000000/scales.png";
+                      theIcon.src = "https://img.icons8.com/nolan/48/scales.png";
                       theIcon.id = theUser.username + "|" + accountNo.value + "|" + profilename;
                       theIcon.alt = "Rebalance";
                       addCell.appendChild(theIcon);
